--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-md-4 col-xs-6 ">
                     <div class="imgbox">
-                        <img src="image/P1024.png" alt="anires">
+                        <img src="image/P1024.png" alt="丑数算法">
                     </div>
                     <a href="other/P1024.cpp" target="_blank">
                         <div class="zp-cover">
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-md-4 col-xs-6 ">
                     <div class="imgbox">
-                        <img src="image/GitHub.png" alt="ibooks">
+                        <img src="image/GitHub.png" alt="GitHub">
                     </div>
                     <a href="https://github.com/bravogohome" target="_blank">
                         <div class="zp-cover">
@@ -161,7 +161,7 @@
 
                 <div class="col-md-4 col-xs-6 ">
                     <div class="imgbox">
-                        <img src="image/P1015.png" alt="blog">
+                        <img src="image/P1015.png" alt="过桥算法">
                     </div>
                     <a href="other/P1015.java" target="_blank">
                         <div class="zp-cover">
